# tidyworld

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  todo
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: PRD.md  TDD.md  architecture.drawio
src/: base.py  tidyworld.py
tests/: conftest.py  test.py  test_extractor.py
tests/integration/ingest/: test_router_pdf.py
tests/unit/ingest/: test_pdf.py  test_pdf_negative.py  test_router.py  test_router_negative.py
tidyworld/: LICENSE  __init__.py  _namespace.py  _prompt.py  _tidyworld.py  _types.py  _utils.py
tidyworld/_agents/: __init__.py  extractor.py  test_agent.py
tidyworld/_llm/: __init__.py  _base.py  _default.py  _litellm.py
tidyworld/_services/: __init__.py  _base.py  _chunk_extraction.py  _data_modeling.py  _information_extraction.py
tidyworld/_storage/: _base.py  _blob_pickle.py  _default.py  _gdb_igraph.py  _ikv_pickle.py  _namespace.py  _vdb_hnswlib.py
tidyworld/extractor/: pipeline.py
tidyworld/extractor/extract/: base.py
tidyworld/extractor/ingest/: base.py  pdf.py  router.py
tidyworld/models/: chunk.py  graph.py
