[project]
name = "tidyworld"
version = "0.0.5"
description = ""
authors = [{ name = "Arindam Roy", email = "arindamroyunofficial@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "docling>=2.97.0",
    "litellm==1.65.8",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.7.0,<0.8",
]

[tool.hatch.build.targets.sdist]
include = ["tidyworld"]

[tool.hatch.build.targets.wheel]
include = ["tidyworld"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D",  # pydocstyle
]
ignore = [
    "C901", # too complex
    "W191", # indentation contains tabs
    "D401", # imperative mood
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

